--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,7 +9,7 @@
         .imgContainer{
             width: 700px;
             height: 700px;
-            background-color: crimson;
+            background-color: rgb(8, 0, 158);
             border-radius: 50%;
             display: flex;
             align-items: flex-end;
