--- a/src/components/portafolio/portafolio.scss
+++ b/src/components/portafolio/portafolio.scss
@@ -1,3 +1,14 @@
 .portafolio{
-    background-color: lightskyblue;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1{
+        font-size: 50px;
+    }
+}
+
+.container{
+    height: 500px;
 }
