--- a/src/components/portafolio/portafolio.scss
+++ b/src/components/portafolio/portafolio.scss
@@ -5,10 +5,18 @@
     align-items: center;
 
     h1{
+        margin-top: 30px;
         font-size: 50px;
     }
+    
 }
 
 .container{
-    height: 500px;
+    margin-bottom: 15px;
+margin-left: 14px;
+margin-top: 90px;
+}
+
+.cardd{
+    border-radius: 100%;
 }
