--- a/src/components/trabajos/trabajos.scss
+++ b/src/components/trabajos/trabajos.scss
@@ -1,3 +1,18 @@
 .trabajos{
-    background-color: lightgreen;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h1{
+        margin-top: 10px;
+        font-size: 50px;
+    }
+    img {
+
+        height: 150px;
+        
+        width: 150px;
+        
+        }
 }
