Se agrego el modulo de contacto y se agrego emailjs

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,1 +1,28 @@
 $mainColor: #000000;
+
+:root{
+    --color-bg-variant: hsl(227, 100%, 46%);
+    --color-primary-variant: rgba(77, 181, 255, 034);
+    --transition: all 400ms ease;
+}
+
+a{
+    color: var(--color-prymary);
+}
+
+/*----------Form-------------*/
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+input, textarea{
+    width: 100%;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    background: transparent;
+    border: 2px solid var(--color-primary-variant);
+    resize: none;
+}
+
