Se agrega ventana de info

--- a/src/components/contacto/contacto.scss
+++ b/src/components/contacto/contacto.scss
@@ -1,5 +1,11 @@
 .contacto{
     background-color: white;
+    h1 {
+        margin-top: 10px;
+        font-size: 50px;
+        text-align: center;
+        margin-bottom: 100px;
+      }
 }
 
 .container.contact__container{
