--- a/src/components/portafolio/portafolio.scss
+++ b/src/components/portafolio/portafolio.scss
@@ -1,18 +1,55 @@
-.portafolio{
+.portafolio {
     background-color: white;
-    display: flex;
-    flex-direction: column;
     align-items: center;
+  h1 {
+    margin-top: 10px;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 100px;
+  }
+  img {
+    width: 100%;
+	height: 100%;
+	object-fit: none;
+	background-color: rgb(255, 255, 255);
+	border: 3px solid #ffffff;
+  }
+}
 
-    h1{
-        margin-top: 30px;
-        font-size: 50px;
-    }
+.portafolio__container{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(100px, 1fr));
+    gap: 50px;
     
 }
 
-.container{
-    margin-bottom: 15px;
-margin-left: 14px;
-margin-top: 90px;
+.portafolio__item{
+    background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
+    padding: 1.3rem;
+    border-radius: 2rem ;
+    border: 1px solid transparent;
+    transition: var(--transition);
 }
+
+.portafolio__item:hover{
+    border-color: grey;
+    background: black;
+}
+
+.portafolio__item-image{
+    border-radius: 1.5rem;
+    overflow: hidden;
+}
+
+.portafolio__item h3{
+    margin: 1.2rem 0 2rem;
+    text-align: center;
+}
+
+.portafolio__item-cta{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    justify-content: center;
+}
+
