--- a/src/components/skills/trabajos.scss
+++ b/src/components/skills/trabajos.scss
@@ -1,18 +1,16 @@
-.trabajos{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.skills {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    h1{
-        margin-top: 10px;
-        font-size: 50px;
-    }
-    img {
-
-        height: 150px;
-        
-        width: 150px;
-        
-        }
+  h1 {
+    margin-top: 10px;
+    font-size: 50px;
+    margin-bottom: 120px;
+  }
+  img {
+    height: 150px;
+    width: 150px;
+  }
 }
