--- a/src/components/barraSuperior/barraSuperior.scss
+++ b/src/components/barraSuperior/barraSuperior.scss
@@ -1,17 +1,23 @@
 @import "../../global.scss";
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .barraSuperior {
   width: 100%;
-  height: 80px;
+  height: 8%;
   background-color: white;
   color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 3;
   transition: all 1s ease;
+  
 
   .wrapper {
-    padding: 10px 30px;
+    padding: 0px 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
