--- a/src/global.scss
+++ b/src/global.scss
@@ -1,9 +1,14 @@
-$mainColor: #000000;
+$mainColor: #0f1c30;
 
 :root{
     --color-bg-variant: hsl(227, 100%, 46%);
     --color-primary-variant: rgba(77, 181, 255, 034);
     --transition: all 400ms ease;
+    --color1: #c2c6ce;
+    --color2: #c0d0ef;
+    --color3: #668dc0;
+    --color4: #304a6e;
+    --color5: #0f1c30;
 }
 
 a{
