--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,7 +9,7 @@
         .imgContainer{
             width: 700px;
             height: 700px;
-            background: linear-gradient(90deg, #1CB5E0 0%, #000851 100%);
+            background: linear-gradient(90deg, #c0d0ef 0%, #0f1c30 100%);
             border-radius: 50%;
             display: flex;
             align-items: flex-end;
