--- a/src/components/portafolio/portafolio.scss
+++ b/src/components/portafolio/portafolio.scss
@@ -7,12 +7,12 @@
     text-align: center;
     margin-bottom: 100px;
   }
+  h3{
+      color: white;
+  }
   img {
     width: 100%;
 	height: 100%;
-	object-fit: none;
-	background-color: rgb(255, 255, 255);
-	border: 3px solid #ffffff;
   }
 }
 
@@ -24,16 +24,14 @@
 }
 
 .portafolio__item{
-    background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
+    background: linear-gradient(90deg, #304A6E 0%, #ffffff 100%);
     padding: 1.3rem;
     border-radius: 2rem ;
-    border: 1px solid transparent;
     transition: var(--transition);
 }
 
 .portafolio__item:hover{
-    border-color: grey;
-    background: black;
+    background: #0F1C30;
 }
 
 .portafolio__item-image{
