--- a/src/components/contacto/contacto.scss
+++ b/src/components/contacto/contacto.scss
@@ -21,8 +21,8 @@
     gap: 1.2rem;
 }
 
-.contact__option{
-    background: var(--color5);
+.contact__option1{
+    background: #17f;
     padding: 1.2rem;
     border-radius: 1.2rem;
     text-align: center;
@@ -30,11 +30,26 @@
     transition: var(--transition);
 }
 
-.contact__option:hover{
-    background: var(--color4);
+.contact__option1:hover{
+    background: #FCAF45;
     opacity: 0.5;
     border-color: var(--color-primary-variant);
 }
+
+.contact__option2{
+    background: #17f;
+    padding: 1.2rem;
+    border-radius: 1.2rem;
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+
+.contact__option2:hover{
+    background: #075E54;
+    border-color: var(--color-primary-variant);
+}
+
 
 .contact__option-icon{
     font-size: 1.5rem;
