Commit final para envio de proyecto

--- a/src/components/barraSuperior/barraSuperior.scss
+++ b/src/components/barraSuperior/barraSuperior.scss
@@ -3,11 +3,12 @@
 *{
   margin: 0;
   padding: 0;
+  
 }
 
 .barraSuperior {
   width: 100%;
-  height: 8%;
+  height: 4rem;
   background-color: white;
   color: $mainColor;
   position: fixed;
