--- a/src/components/contacto/contacto.scss
+++ b/src/components/contacto/contacto.scss
@@ -1,5 +1,8 @@
 .contacto{
     background-color: white;
+    max-width: 1446px;
+    margin: 0 auto;
+    min-width: 1400px;
     h1 {
         margin-top: 0px;
         font-size: 50px;
