--- a/src/app.scss
+++ b/src/app.scss
@@ -1,23 +1,27 @@
-.app{
-    height: 100vh;
+.app {
+  height: 100vh;
+  display: flex;
+  width: 100%;
+  max-width: 1446px;
+  margin: 0 auto;
 
-    .sections{
-        width: 100%;
-        height: calc(100vh - 70px);
-        background-color: rgb(0, 0, 0);
-        position: relative;
-        top: 70px;
-        scroll-behavior: smooth;
-        scroll-snap-type: y mandatory;
-        scrollbar-width: none;
-        &::-webkit-scrollbar{
-            display: none;
-        }
-
-        > *{
-            width: 100rw;
-            height: calc(100vh - 70px); 
-            scroll-snap-align: start;
-        }
+  .sections {
+    width: 100%;
+    height: calc(100vh - 70px);
+    background-color: rgb(0, 0, 0);
+    position: relative;
+    top: 70px;
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
     }
+
+    > * {
+      width: 100rw;
+      height: calc(100vh - 70px);
+      scroll-snap-align: start;
+    }
+  }
 }
